1.2.3.dev0
 * #88: Fix declared pykwalify compatibility version range in setup.py to prevent use of ancient
   versions of pykwalify with large version numbers.

1.2.2
 * #85: Fix compatibility issue between pykwalify and ruamel.yaml 0.15.52, which manifested in
   borgmatic as a pykwalify RuleError.

1.2.1
 * Skip before/after backup hooks when only doing --prune, --check, --list, and/or --info.
 * #71: Support for XDG_CONFIG_HOME environment variable for specifying alternate user ~/.config/
   path.
 * #74, #83: Support for Borg --json option via borgmatic command-line to --list archives or show
   archive --info in JSON format, ideal for programmatic consumption.
 * #38, #76: Upgrade ruamel.yaml compatibility version range and fix support for Python 3.7.
 * #77: Skip non-"*.yaml" config filenames in /etc/borgmatic.d/ so as not to parse backup files,
   editor swap files, etc.
 * #81: Document user-defined hooks run before/after backup, or on error.
 * Add code style guidelines to the documention.

1.2.0
 * #61: Support for Borg --list option via borgmatic command-line to list all archives.
 * #61: Support for Borg --info option via borgmatic command-line to display summary information.
 * #62: Update README to mention other ways of installing borgmatic.
 * Support for Borg --prefix option for consistency checks via "prefix" option in borgmatic's
   consistency configuration.
 * Add introductory screencast link to documentation.
 * #59: Ignore "check_last" and consistency "prefix" when "archives" not in consistency checks.
 * #60: Add "Persistent" flag to systemd timer example.
 * #63: Support for Borg --nobsdflags option to skip recording bsdflags (e.g. NODUMP, IMMUTABLE) in
   archive.
 * #69: Support for Borg prune --umask option using value of existing "umask" option in borgmatic's
   storage configuration.
 * Update tox.ini to only assume Python 3.x instead of Python 3.4 specifically.